--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,32 @@
 /* add css module styles here (optional) */
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+.primary {
+  color: blue;
+  border-color: blue;
+  border-radius: 6px;
+  height: 5%;
+  width: 5%;
+}
+
+.dashed{
+  border-radius: 6px;
+  height: 5%;
+  width: 5%;
+  border-style: dashed;
+}
+
+.link{
+  border: none;
+  height: 5%;
+  width: 5%;
+  color: blue;
+  text-decoration-line: underline;
+  
+
+}
+.text{
+  border: none;
+  height: 5%;
+  width: 5%;
+  background-color:white
 }
